# zero2prod_walkthrough

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  configuration.yaml  docker-compose.yaml
.github/workflows/: main.yml
.sqlx/: query-19f93003aea32a8643b2f54665800fc5aeedf89d6c9a5a79c0e59eb9c1831974.json  query-24032a5b3069db9845c99d55b31142afbe27ff83d2a5440c95d1bed6cfe589d3.json  query-49d67b84bb628271975ed9f0820e1710cec3f46db570f86150180d33702cad6c.json  query-567ddbb7716fc90dff7ca9b4496319817376da22deb00b18d08c0969dca4c3a1.json  query-6168160c6a6da98be96451bd98e018f459a90075a80ab0d5e734219b1df632af.json  query-85c18306082764a06e8800245fb988b23cf3f5d94c0de820cd176a6dffe1dac8.json  query-904a81eefa727ac79ea2f3383df6b23ec633abe20e34813ac52f7f18bb604a11.json  query-a5eb511e13d5b24986bbf447b65babc6ceae1e40967ad41b2e8c4ec1eaf074e0.json  query-a8d3cc191fba134d434208eee8af81ea19083d5560c8aa6ba2b7aee706152adb.json  query-ae342f5c3e690c865b42d1589d75dd7f6401c3300f534e41b3b101cdb17474b3.json  query-ba258f203872ca1403e83b80123adca98b33cae963043dd4b6146efb4c2a9416.json  query-f8b077339a469c947a539dd751c56db7662ea41f3b2b8740cb760805705b6466.json
configuration/: base.yaml  local.yaml  production.yaml
k8s/: app.yaml  db.yaml  ingress.yaml  redis.yaml
migrations/: 20250206160255_create_subscriptions_table.sql  20250329170103_make_subscription_status_not_null.sql
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
tests/: health_check.rs
(+32 files in other folders)
